crates/ars-components/src/date_time/time_field/snapshots/ars_components__date_time__time_field__tests__description.snap
---
source: crates/ars-components/src/date_time/time_field/tests.rs
expression: snapshot_attrs(&api.description_attrs())
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-part",
            ),
            String(
                "description",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "time-field",
            ),
        ),
        (
            Id,
            String(
                "meeting-time-description",
            ),
        ),
    ],
    styles: [],
}
