crates/ars-components/src/date_time/time_field/snapshots/ars_components__date_time__time_field__tests__error_message.snap
---
source: crates/ars-components/src/date_time/time_field/tests.rs
expression: snapshot_attrs(&api.error_message_attrs())
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-part",
            ),
            String(
                "error-message",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "time-field",
            ),
        ),
        (
            Id,
            String(
                "meeting-time-error-message",
            ),
        ),
        (
            Role,
            String(
                "alert",
            ),
        ),
    ],
    styles: [],
}
