crates/ars-components/src/date_time/time_field/snapshots/ars_components__date_time__time_field__tests__hidden_input_filled.snap
---
source: crates/ars-components/src/date_time/time_field/tests.rs
expression: snapshot_attrs(&api.hidden_input_attrs())
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-part",
            ),
            String(
                "hidden-input",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "time-field",
            ),
        ),
        (
            Name,
            String(
                "starts_at",
            ),
        ),
        (
            Type,
            String(
                "hidden",
            ),
        ),
        (
            Value,
            String(
                "14:30:45",
            ),
        ),
    ],
    styles: [],
}
