crates/ars-components/src/date_time/time_field/snapshots/ars_components__date_time__time_field__tests__label.snap
---
source: crates/ars-components/src/date_time/time_field/tests.rs
expression: snapshot_attrs(&api.label_attrs())
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-part",
            ),
            String(
                "label",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "time-field",
            ),
        ),
        (
            Id,
            String(
                "meeting-time-label",
            ),
        ),
    ],
    styles: [],
}
