crates/ars-components/src/date_time/time_field/snapshots/ars_components__date_time__time_field__tests__root_disabled_readonly_invalid.snap
---
source: crates/ars-components/src/date_time/time_field/tests.rs
expression: snapshot_attrs(&disabled_api.root_attrs())
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-disabled",
            ),
            Bool(
                true,
            ),
        ),
        (
            Data(
                "ars-invalid",
            ),
            Bool(
                true,
            ),
        ),
        (
            Data(
                "ars-part",
            ),
            String(
                "root",
            ),
        ),
        (
            Data(
                "ars-readonly",
            ),
            Bool(
                true,
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "time-field",
            ),
        ),
        (
            Data(
                "ars-state",
            ),
            String(
                "idle",
            ),
        ),
        (
            Id,
            String(
                "meeting-time",
            ),
        ),
    ],
    styles: [],
}
