crates/ars-components/src/date_time/time_field/snapshots/ars_components__date_time__time_field__tests__segment_day_period_am.snap
---
source: crates/ars-components/src/date_time/time_field/tests.rs
expression: "snapshot_attrs(&am_api.segment_attrs(&DateSegmentKind::DayPeriod))"
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-part",
            ),
            String(
                "segment",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "time-field",
            ),
        ),
        (
            Data(
                "ars-segment",
            ),
            String(
                "day-period",
            ),
        ),
        (
            Aria(
                Label,
            ),
            String(
                "AM/PM",
            ),
        ),
        (
            Aria(
                ValueMax,
            ),
            String(
                "1",
            ),
        ),
        (
            Aria(
                ValueMin,
            ),
            String(
                "0",
            ),
        ),
        (
            Aria(
                ValueNow,
            ),
            String(
                "0",
            ),
        ),
        (
            Aria(
                ValueText,
            ),
            String(
                "AM",
            ),
        ),
        (
            Role,
            String(
                "spinbutton",
            ),
        ),
        (
            TabIndex,
            String(
                "-1",
            ),
        ),
    ],
    styles: [],
}
