crates/ars-components/src/date_time/time_field/snapshots/ars_components__date_time__time_field__tests__segment_day_period_pm.snap
---
source: crates/ars-components/src/date_time/time_field/tests.rs
expression: "snapshot_attrs(&api.segment_attrs(&DateSegmentKind::DayPeriod))"
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-part",
            ),
            String(
                "segment",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "time-field",
            ),
        ),
        (
            Data(
                "ars-segment",
            ),
            String(
                "day-period",
            ),
        ),
        (
            Aria(
                Label,
            ),
            String(
                "AM/PM",
            ),
        ),
        (
            Aria(
                ValueMax,
            ),
            String(
                "1",
            ),
        ),
        (
            Aria(
                ValueMin,
            ),
            String(
                "0",
            ),
        ),
        (
            Aria(
                ValueNow,
            ),
            String(
                "1",
            ),
        ),
        (
            Aria(
                ValueText,
            ),
            String(
                "PM",
            ),
        ),
        (
            Aria(
                DescribedBy,
            ),
            String(
                "meeting-time-error-message",
            ),
        ),
        (
            Role,
            String(
                "spinbutton",
            ),
        ),
        (
            TabIndex,
            String(
                "-1",
            ),
        ),
    ],
    styles: [],
}
